// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with Default & show/hide Animation correctly 1`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_value": 0,
    },
    "animationDuration": 150,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": null,
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_value": 0,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "closed",
}
`;

exports[`should render with Default & show/hide Animation correctly 2`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": TimingAnimation {
        "__active": true,
        "__isInteraction": true,
        "__onEnd": [Function],
        "_animationFrame": 1,
        "_delay": 0,
        "_duration": 150,
        "_easing": [Function],
        "_fromValue": 0,
        "_onUpdate": [Function],
        "_startTime": 1540495093607,
        "_toValue": 1,
      },
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 0,
    },
    "animationDuration": 150,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": TimingAnimation {
          "__active": true,
          "__isInteraction": true,
          "__onEnd": [Function],
          "_animationFrame": 1,
          "_delay": 0,
          "_duration": 150,
          "_easing": [Function],
          "_fromValue": 0,
          "_onUpdate": [Function],
          "_startTime": 1540495093607,
          "_toValue": 1,
        },
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 0,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "opening",
}
`;

exports[`should render with Default & show/hide Animation correctly 3`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 1,
    },
    "animationDuration": 150,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": null,
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 1,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "opened",
}
`;

exports[`should render with Default & show/hide Animation correctly 4`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": TimingAnimation {
        "__active": true,
        "__isInteraction": true,
        "__onEnd": [Function],
        "_animationFrame": 18,
        "_delay": 0,
        "_duration": 150,
        "_easing": [Function],
        "_fromValue": 1,
        "_onUpdate": [Function],
        "_startTime": 1540495094619,
        "_toValue": 0,
      },
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 1,
    },
    "animationDuration": 150,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": TimingAnimation {
          "__active": true,
          "__isInteraction": true,
          "__onEnd": [Function],
          "_animationFrame": 18,
          "_delay": 0,
          "_duration": 150,
          "_easing": [Function],
          "_fromValue": 1,
          "_onUpdate": [Function],
          "_startTime": 1540495094619,
          "_toValue": 0,
        },
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 1,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "closing",
}
`;

exports[`should render with Default & show/hide Animation correctly 5`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 0,
    },
    "animationDuration": 150,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": null,
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 0,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "closed",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 1`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_value": 0,
    },
    "animationDuration": 200,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": null,
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_value": 0,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "closed",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 2`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": TimingAnimation {
        "__active": true,
        "__isInteraction": true,
        "__onEnd": [Function],
        "_animationFrame": 36,
        "_delay": 0,
        "_duration": 200,
        "_easing": [Function],
        "_fromValue": 0,
        "_onUpdate": [Function],
        "_startTime": 1540495095631,
        "_toValue": 1,
      },
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 0,
    },
    "animationDuration": 200,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": TimingAnimation {
          "__active": true,
          "__isInteraction": true,
          "__onEnd": [Function],
          "_animationFrame": 36,
          "_delay": 0,
          "_duration": 200,
          "_easing": [Function],
          "_fromValue": 0,
          "_onUpdate": [Function],
          "_startTime": 1540495095631,
          "_toValue": 1,
        },
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 0,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "opening",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 3`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 1,
    },
    "animationDuration": 200,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": null,
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 1,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "opened",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 4`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": TimingAnimation {
        "__active": true,
        "__isInteraction": true,
        "__onEnd": [Function],
        "_animationFrame": 56,
        "_delay": 0,
        "_duration": 200,
        "_easing": [Function],
        "_fromValue": 1,
        "_onUpdate": [Function],
        "_startTime": 1540495096636,
        "_toValue": 0,
      },
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 1,
    },
    "animationDuration": 200,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": TimingAnimation {
          "__active": true,
          "__isInteraction": true,
          "__onEnd": [Function],
          "_animationFrame": 56,
          "_delay": 0,
          "_duration": 200,
          "_easing": [Function],
          "_fromValue": 1,
          "_onUpdate": [Function],
          "_startTime": 1540495096636,
          "_toValue": 0,
        },
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 1,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "closing",
}
`;

exports[`should render with FadeAnimation & show/hide correctly 5`] = `
Object {
  "dialogAnimation": FadeAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 0,
    },
    "animationDuration": 200,
    "animations": Object {
      "opacity": AnimatedValue {
        "_animation": null,
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 0,
      },
    },
    "useNativeDriver": true,
  },
  "dialogState": "closed",
}
`;

exports[`should render with PopupDialog with Overlay 1`] = `
<Dialog
  actionContainerStyle={null}
  actions={null}
  actionsBordered={true}
  animationDuration={150}
  containerStyle={null}
  dialogAnimation={
    FadeAnimation {
      "animate": AnimatedValue {
        "_animation": null,
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 0,
      },
      "animationDuration": 150,
      "animations": Object {
        "opacity": AnimatedValue {
          "_animation": null,
          "_children": Array [],
          "_listeners": Object {},
          "_offset": 0,
          "_tracking": null,
          "_value": 0,
        },
      },
      "useNativeDriver": true,
    }
  }
  dialogStyle={null}
  dialogTitle={null}
  hasOverlay={true}
  height={null}
  onDismiss={[Function]}
  onHardwareBackPress={[Function]}
  onShow={[Function]}
  onTouchOutside={[Function]}
  overlayBackgroundColor="#000"
  overlayOpacity={0.5}
  overlayPointerEvents={null}
  rounded={true}
  show={true}
  useNativeDriver={true}
  visible={false}
  width={null}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "zIndex": 1000,
        },
        Object {
          "height": 0,
          "left": 0,
          "top": -10000,
          "width": 0,
        },
        null,
      ]
    }
  >
    <react-native-mock>
      <Overlay
        animationDuration={150}
        backgroundColor="#000"
        onPress={[Function]}
        opacity={0.5}
        pointerEvents="none"
        useNativeDriver={true}
        visible={false}
      >
        <AnimatedComponent
          pointerEvents="none"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#000",
                "opacity": AnimatedValue {
                  "_animation": null,
                  "_children": Array [],
                  "_listeners": Object {},
                  "_offset": 0,
                  "_value": 0,
                },
              },
            ]
          }
        >
          <View>
            <react-native-mock>
              <TouchableOpacity
                onPress={[Function]}
              >
                <react-native-mock />
              </TouchableOpacity>
            </react-native-mock>
          </View>
        </AnimatedComponent>
      </Overlay>
      <AnimatedComponent
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 8,
            },
            Object {
              "height": null,
              "width": null,
            },
            null,
            Object {
              "opacity": AnimatedValue {
                "_animation": null,
                "_children": Array [],
                "_listeners": Object {},
                "_offset": 0,
                "_tracking": null,
                "_value": 0,
              },
            },
          ]
        }
      >
        <View>
          <react-native-mock />
        </View>
      </AnimatedComponent>
    </react-native-mock>
  </View>
</Dialog>
`;

exports[`should render with PopupDialog without Overlay 1`] = `
<Dialog
  actionContainerStyle={null}
  actions={null}
  actionsBordered={true}
  animationDuration={150}
  containerStyle={null}
  dialogAnimation={
    FadeAnimation {
      "animate": AnimatedValue {
        "_animation": null,
        "_children": Array [],
        "_listeners": Object {},
        "_offset": 0,
        "_tracking": null,
        "_value": 0,
      },
      "animationDuration": 150,
      "animations": Object {
        "opacity": AnimatedValue {
          "_animation": null,
          "_children": Array [],
          "_listeners": Object {},
          "_offset": 0,
          "_tracking": null,
          "_value": 0,
        },
      },
      "useNativeDriver": true,
    }
  }
  dialogStyle={null}
  dialogTitle={null}
  hasOverlay={false}
  height={null}
  onDismiss={[Function]}
  onHardwareBackPress={[Function]}
  onShow={[Function]}
  onTouchOutside={[Function]}
  overlayBackgroundColor="#000"
  overlayOpacity={0.5}
  overlayPointerEvents={null}
  rounded={true}
  show={true}
  useNativeDriver={true}
  visible={false}
  width={null}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "zIndex": 1000,
        },
        Object {
          "height": 0,
          "left": 0,
          "top": -10000,
          "width": 0,
        },
        null,
      ]
    }
  >
    <react-native-mock>
      <Overlay
        animationDuration={150}
        backgroundColor="#000"
        onPress={[Function]}
        opacity={0.5}
        pointerEvents="none"
        useNativeDriver={true}
        visible={false}
      >
        <AnimatedComponent
          pointerEvents="none"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#000",
                "opacity": AnimatedValue {
                  "_animation": null,
                  "_children": Array [],
                  "_listeners": Object {},
                  "_offset": 0,
                  "_value": 0,
                },
              },
            ]
          }
        >
          <View>
            <react-native-mock>
              <TouchableOpacity
                onPress={[Function]}
              >
                <react-native-mock />
              </TouchableOpacity>
            </react-native-mock>
          </View>
        </AnimatedComponent>
      </Overlay>
      <AnimatedComponent
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 8,
            },
            Object {
              "height": null,
              "width": null,
            },
            null,
            Object {
              "opacity": AnimatedValue {
                "_animation": null,
                "_children": Array [],
                "_listeners": Object {},
                "_offset": 0,
                "_tracking": null,
                "_value": 0,
              },
            },
          ]
        }
      >
        <View>
          <react-native-mock />
        </View>
      </AnimatedComponent>
    </react-native-mock>
  </View>
</Dialog>
`;

exports[`should render with ScaleAnimation & show/hide correctly 1`] = `
Object {
  "dialogAnimation": ScaleAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_value": 0,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "scale": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": null,
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_value": 0,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "closed",
}
`;

exports[`should render with ScaleAnimation & show/hide correctly 2`] = `
Object {
  "dialogAnimation": ScaleAnimation {
    "animate": AnimatedValue {
      "_animation": SpringAnimation {
        "__active": true,
        "__isInteraction": true,
        "__onEnd": [Function],
        "_animationFrame": 76,
        "_friction": 22,
        "_initialVelocity": 0,
        "_lastPosition": 0,
        "_lastTime": 1540495097648,
        "_lastVelocity": 0,
        "_onUpdate": [Function],
        "_overshootClamping": false,
        "_restDisplacementThreshold": 0.001,
        "_restSpeedThreshold": 0.001,
        "_startPosition": 0,
        "_tension": 320.7,
        "_toValue": 1,
      },
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 0,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "scale": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": SpringAnimation {
                "__active": true,
                "__isInteraction": true,
                "__onEnd": [Function],
                "_animationFrame": 76,
                "_friction": 22,
                "_initialVelocity": 0,
                "_lastPosition": 0,
                "_lastTime": 1540495097648,
                "_lastVelocity": 0,
                "_onUpdate": [Function],
                "_overshootClamping": false,
                "_restDisplacementThreshold": 0.001,
                "_restSpeedThreshold": 0.001,
                "_startPosition": 0,
                "_tension": 320.7,
                "_toValue": 1,
              },
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_tracking": null,
              "_value": 0,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "opening",
}
`;

exports[`should render with ScaleAnimation & show/hide correctly 3`] = `
Object {
  "dialogAnimation": ScaleAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 1,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "scale": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": null,
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_tracking": null,
              "_value": 1,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "opened",
}
`;

exports[`should render with ScaleAnimation & show/hide correctly 4`] = `
Object {
  "dialogAnimation": ScaleAnimation {
    "animate": AnimatedValue {
      "_animation": SpringAnimation {
        "__active": true,
        "__isInteraction": true,
        "__onEnd": [Function],
        "_animationFrame": 120,
        "_friction": 22,
        "_initialVelocity": 0,
        "_lastPosition": 1,
        "_lastTime": 1540495098655,
        "_lastVelocity": 0,
        "_onUpdate": [Function],
        "_overshootClamping": false,
        "_restDisplacementThreshold": 0.001,
        "_restSpeedThreshold": 0.001,
        "_startPosition": 1,
        "_tension": 320.7,
        "_toValue": 0,
      },
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 1,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "scale": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": SpringAnimation {
                "__active": true,
                "__isInteraction": true,
                "__onEnd": [Function],
                "_animationFrame": 120,
                "_friction": 22,
                "_initialVelocity": 0,
                "_lastPosition": 1,
                "_lastTime": 1540495098655,
                "_lastVelocity": 0,
                "_onUpdate": [Function],
                "_overshootClamping": false,
                "_restDisplacementThreshold": 0.001,
                "_restSpeedThreshold": 0.001,
                "_startPosition": 1,
                "_tension": 320.7,
                "_toValue": 0,
              },
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_tracking": null,
              "_value": 1,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "closing",
}
`;

exports[`should render with ScaleAnimation & show/hide correctly 5`] = `
Object {
  "dialogAnimation": ScaleAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 0,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "scale": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": null,
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_tracking": null,
              "_value": 0,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "closed",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 1`] = `
Object {
  "dialogAnimation": SlideAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_value": 0,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "translateY": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": null,
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_value": 0,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "closed",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 2`] = `
Object {
  "dialogAnimation": SlideAnimation {
    "animate": AnimatedValue {
      "_animation": SpringAnimation {
        "__active": true,
        "__isInteraction": true,
        "__onEnd": [Function],
        "_animationFrame": 165,
        "_friction": 31,
        "_initialVelocity": 0,
        "_lastPosition": 0,
        "_lastTime": 1540495099666,
        "_lastVelocity": 0,
        "_onUpdate": [Function],
        "_overshootClamping": false,
        "_restDisplacementThreshold": 0.001,
        "_restSpeedThreshold": 0.001,
        "_startPosition": 0,
        "_tension": 320.7,
        "_toValue": 1,
      },
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 0,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "translateY": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": SpringAnimation {
                "__active": true,
                "__isInteraction": true,
                "__onEnd": [Function],
                "_animationFrame": 165,
                "_friction": 31,
                "_initialVelocity": 0,
                "_lastPosition": 0,
                "_lastTime": 1540495099666,
                "_lastVelocity": 0,
                "_onUpdate": [Function],
                "_overshootClamping": false,
                "_restDisplacementThreshold": 0.001,
                "_restSpeedThreshold": 0.001,
                "_startPosition": 0,
                "_tension": 320.7,
                "_toValue": 1,
              },
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_tracking": null,
              "_value": 0,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "opening",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 3`] = `
Object {
  "dialogAnimation": SlideAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 1,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "translateY": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": null,
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_tracking": null,
              "_value": 1,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "opened",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 4`] = `
Object {
  "dialogAnimation": SlideAnimation {
    "animate": AnimatedValue {
      "_animation": SpringAnimation {
        "__active": true,
        "__isInteraction": true,
        "__onEnd": [Function],
        "_animationFrame": 209,
        "_friction": 31,
        "_initialVelocity": 0,
        "_lastPosition": 1,
        "_lastTime": 1540495100672,
        "_lastVelocity": 0,
        "_onUpdate": [Function],
        "_overshootClamping": false,
        "_restDisplacementThreshold": 0.001,
        "_restSpeedThreshold": 0.001,
        "_startPosition": 1,
        "_tension": 320.7,
        "_toValue": 0,
      },
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 1,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "translateY": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": SpringAnimation {
                "__active": true,
                "__isInteraction": true,
                "__onEnd": [Function],
                "_animationFrame": 209,
                "_friction": 31,
                "_initialVelocity": 0,
                "_lastPosition": 1,
                "_lastTime": 1540495100672,
                "_lastVelocity": 0,
                "_onUpdate": [Function],
                "_overshootClamping": false,
                "_restDisplacementThreshold": 0.001,
                "_restSpeedThreshold": 0.001,
                "_startPosition": 1,
                "_tension": 320.7,
                "_toValue": 0,
              },
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_tracking": null,
              "_value": 1,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "closing",
}
`;

exports[`should render with SlideAnimation & show/hide correctly 5`] = `
Object {
  "dialogAnimation": SlideAnimation {
    "animate": AnimatedValue {
      "_animation": null,
      "_children": Array [],
      "_listeners": Object {},
      "_offset": 0,
      "_tracking": null,
      "_value": 0,
    },
    "animations": Object {
      "transform": Array [
        Object {
          "translateY": AnimatedInterpolation {
            "_children": Array [],
            "_interpolation": undefined,
            "_parent": AnimatedValue {
              "_animation": null,
              "_children": Array [],
              "_listeners": Object {},
              "_offset": 0,
              "_tracking": null,
              "_value": 0,
            },
          },
        },
      ],
    },
    "useNativeDriver": true,
  },
  "dialogState": "closed",
}
`;
